--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Future Imperfect</a></h1>
+						<h1><a href="index.html">萍水相逢</a></h1>
 						<nav class="links">
 							<ul>
 								<li><a href="#">活動</a></li>
