影音上傳及預覽框架，文字上傳框架

--- a/assets/personality.html
+++ b/assets/personality.html
@@ -568,8 +568,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
         			</div>
         			<div class="modal-body">
 						<a href="picture_push.html"><img style="padding:0px 28px;" src="./images/icon_photo.png"/>圖片</a>
-						<a href="#"><img style="padding:0px 28px;" src="./images/icon_text.png"/>文字</a>
-						<a href="#"><img style="padding:0px 28px;" src="./images/icon_video.png"/>影音</a>
+						<a href="text_push.html"><img style="padding:0px 28px;" src="./images/icon_text.png"/>文字</a>
+						<a href="video_push.html"><img style="padding:0px 28px;" src="./images/icon_video.png"/>影音</a>
         			</div>
         			<div class="modal-footer">
          			 <button type="button" class="button small" data-dismiss="modal">Close</button>
