--- a/assets/text_push.html
+++ b/assets/text_push.html
@@ -15,7 +15,7 @@
 		<title>Future Imperfect by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -139,7 +139,7 @@
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a>
+								<a href="#" class="logo"><img src="../images/logo.jpg" alt="" /></a>
 								<header>
 									<h2>暱稱</h2>
 								</header>
@@ -221,9 +221,9 @@
         			 
         			</div>
         			<div class="modal-body">
-						<a href="picture_push.html"><img style="padding:0px 28px;" src="./images/icon_photo.png"/>圖片</a>
-						<a href="text_push.html"><img style="padding:0px 28px;" src="./images/icon_text.png"/>文字</a>
-						<a href="video_push.html"><img style="padding:0px 28px;" src="./images/icon_video.png"/>影音</a>
+						<a href="picture_push.html"><img style="padding:0px 28px;" src="../images/icon_photo.png"/>圖片</a>
+						<a href="text_push.html"><img style="padding:0px 28px;" src="../images/icon_text.png"/>文字</a>
+						<a href="video_push.html"><img style="padding:0px 28px;" src="../images/icon_video.png"/>影音</a>
         			</div>
         			<div class="modal-footer">
          			 <button type="button" class="button small" data-dismiss="modal">Close</button>
@@ -233,11 +233,11 @@
   			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="js/jquery.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
 			<script>
 				$('#myModal').on('shown.bs.modal', function () {
 		  			$('#myInput').trigger('focus')
