新增粉絲框架

--- a/assets/personality.html
+++ b/assets/personality.html
@@ -467,7 +467,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                         <section class="blurb">
                             <h2>About Me</h2>
                             <p>...</p>
-                        </section>
+						</section>
 
 						<!-- Posts List -->
 							<section>
@@ -476,6 +476,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<article>
 											<header>
 												<h2><a href=" " class="button fit" data-toggle="modal" data-target="#exampleModalCenter">發表</a></h2>
+											</header>
+										</article>
+									</li>
+									<li>
+										<article>
+											<header>
+												<h2><a href="fans.html" class="button fit">Fans</a></h2>
 											</header>
 										</article>
 									</li>
